# mcp_works

./: .gitignore  README.md  mcp_client.py  mcp_host.py  mcp_server.py
cpp/: CMakeLists.txt  gemini_test.hpp  main.cpp
cpp_image_gen/: CMakeLists.txt  main.cpp
cpp_image_gen/include/: GeminiImageGenerator.hpp
cpp_image_gen/src/: GeminiImageGenerator.cpp
python/: env_setting.sh
